Updated /rest hyperlink in index.html

--- a/irods-frontend/index.html
+++ b/irods-frontend/index.html
@@ -11,7 +11,7 @@
 <ul>
     <li><a href="/irods-cloud-frontend">iRODS Cloudbrowser frontend</a></li>
     <li><a href="/irods-cloud-backend">iRODS Cloudbrowser backend</a></li>
-    <li><a href="/rest/rest">iRODS REST service</a></li>
+    <li><a href="/rest">iRODS REST service</a></li>
 </ul>
 
 
