Moved the builing of the frontend to the build process

--- a/irods-frontend/index.html
+++ b/irods-frontend/index.html
@@ -9,8 +9,7 @@
 <h1>Services available on frontend.*.rit.unimaas.nl</h1>
 
 <ul>
-    <li><a href="/irods-cloud-frontend">iRODS Cloudbrowser frontend</a></li>
-    <li><a href="/irods-cloud-backend">iRODS Cloudbrowser backend</a></li>
+    <li><a href="/irods-cloud-backend">iRODS Cloudbrowser</a></li>
     <li><a href="/rest">iRODS REST service</a></li>
 </ul>
 
